# chesstillo

./: .actrc  .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: find_boost.cmake  find_engine_deps.cmake  find_erlang.cmake  find_googletest.cmake  find_tui_deps.cmake  format.cmake
engine/: .clang-format  CMakeLists.txt
engine/include/chesstillo/: board.hpp  constants.hpp  fen.hpp  fill.hpp  move.hpp  move_gen.hpp  options.hpp  position.hpp  search.hpp  transposition.hpp  types.hpp  utility.hpp  ybwc.hpp
engine/include/engine/: board.hpp  config.hpp  constants.hpp  engine.hpp  evaluation.hpp  fen.hpp  fill.hpp  game.hpp  hash.hpp  move.hpp  move_gen.hpp  options.hpp  position.hpp  scheduler.hpp  search.hpp  settings.hpp  square.hpp  threads.hpp  transposition.hpp  types.hpp  uci.hpp  utility.hpp  utils.hpp  ybwc.hpp
engine/include/tb/: tbcore.h  tbprobe.h
engine/src/: board.cpp  evaluation.cpp  evaluation_test.cpp  fen.cpp  fen_test.cpp  fill.cpp  game.cpp  hash.cpp  initializer.cpp  main.cpp  move.cpp  move_gen.cpp  move_gen_test.cpp  node.cpp  options.cpp  perft.cpp  position.cpp  position_test.cpp  scheduler.cpp  scheduler_test.cpp  search.cpp  search_test.cpp  threads.cpp  transposition.cpp  transposition_test.cpp  uci.cpp  utility.cpp  utils.cpp  worker.cpp  worker_test.cpp  ybwc.cpp  ybwc_test.cpp
engine/src/tb/: tbcore.c  tbprobe.cpp
gui/: contracts.hpp  fonts.hpp  main.cpp  theme.hpp  utils.cpp  utils.hpp
gui/components/: chessboard.cpp  chessboard.hpp  match.hpp  moves_board.hpp  scroll_view.hpp  square.hpp
gui/screens/: home.hpp
include/chesstillo/: board.hpp  constants.hpp  evaluation.hpp  fen.hpp  game.hpp  move.hpp  move_gen.hpp  position.hpp  scheduler.hpp  search.hpp  threads.hpp  transposition.hpp  types.hpp  utility.hpp  ybwc.hpp
include/tui/: theme.hpp  utility.hpp
include/uci/: expr.hpp  parser.hpp  types.hpp
nn/: .clang-format  .gitignore  CMakeLists.txt  README.md  mix.exs
nn/c_src/: chess.cpp  module.cpp  nif_utils.cpp  nn.cpp
nn/config/: config.exs
nn/include/nn/: chess.hpp  nif_utils.hpp
nn/lib/: nn.ex
nn/lib/chess/: board.ex  t.ex
nn/lib/mix/tasks/: generate_training_data.ex  train_model.ex
nn/lib/nn/: model.ex
nn/priv/model-v1/: model.axon  params
nn/test/: nn_test.exs
perft/: main.cpp
src/: board.cpp  board.hpp  board_test.cpp  constants.hpp  evaluation.cpp  evaluation_test.cpp  fen.cpp  fen.hpp  fen_test.cpp  fill.cpp  fill.hpp  game.cpp  main.cpp  move.cpp  move.hpp  move_gen.cpp  move_gen_test.cpp  move_test.cpp  options.cpp  position.cpp  position_test.cpp  scheduler.cpp  scheduler_test.cpp  search.cpp  search_test.cpp  threads.cpp  transposition.cpp  transposition_test.cpp  types.hpp  utility.cpp  ybwc.cpp  ybwc_test.cpp
tui/: .clang-format  CMakeLists.txt  contracts.hpp  fonts.hpp  main.cpp  theme.cpp  theme.hpp  utils.cpp  utils.hpp
tui/components/: chessboard.hpp  match.hpp  moves_board.hpp  scroll_view.hpp  square.hpp
tui/include/tui/: color.hpp  components.hpp  config.hpp  constants.hpp  contracts.hpp  fonts.hpp  hooks.hpp  mapping.hpp  screens.hpp  theme.hpp  tui.hpp  types.hpp  utility.hpp
tui/include/tui/component/: chessboard.hpp  command_input.hpp  engine_settings.hpp  input.hpp  modal.hpp  modal_view.hpp  scroll_view.hpp  square.hpp  switch.hpp  view.hpp
tui/include/tui/screen/: analyze.hpp  home.hpp
tui/screens/: home.hpp
tui/src/: color.cpp  config.cpp  fonts.cpp  hooks.cpp  main.cpp  mapping.cpp  mapping_test.cpp  theme.cpp  utility.cpp  utils.cpp
tui/src/component/: chessboard.cpp  command_input.cpp  engine_settings.cpp  engine_settings_test.cpp  input.cpp  input_test.cpp  modal.cpp  modal_test.cpp  modal_view.cpp  modal_view_test.cpp  scroll_view.cpp  square.cpp  switch.cpp  view.cpp  view_test.cpp
tui/src/screen/: analyze.cpp  home.cpp
uci/: .clang-format  CMakeLists.txt  expr.cpp  parser.cpp  parser_test.cpp  scanner.cpp
uci/exprs/: bestmove.cpp  copyprotection.cpp  go.cpp  id.cpp  info.cpp  option.cpp  position.cpp  register.cpp  registration.cpp  setoption.cpp
uci/include/uci/: command.hpp  engine.hpp  link.hpp  parser.hpp  process.hpp  scanner.hpp  types.hpp  uci.hpp  ui.hpp  utils.hpp
uci/src/: engine.cpp  engine_test.cpp  link.cpp  link_test.cpp  parser.cpp  parser_test.cpp  scanner.cpp  scanner_test.cpp  uci.cpp
uci/src/command/: bestmove.cpp  copyprotection.cpp  debug.cpp  go.cpp  id.cpp  info.cpp  option.cpp  position.cpp  register.cpp  registration.cpp  setoption.cpp
